Visual Modifications, user experience, titles in view controllers

--- a/QPest/MapStoryboard.storyboard
+++ b/QPest/MapStoryboard.storyboard
@@ -10,9 +10,16 @@
         <scene sceneID="Ssp-hQ-gy1">
             <objects>
                 <navigationController id="H44-Jw-9Gx" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="eBX-0o-4nl">
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="384" height="667"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="eBX-0o-4nl">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="barTintColor" red="0.23529411764705882" green="0.66274509803921566" blue="0.36078431372549019" alpha="1" colorSpace="calibratedRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        </textAttributes>
                     </navigationBar>
                     <connections>
                         <segue destination="zlH-6U-Gh7" kind="relationship" relationship="rootViewController" id="NPq-Zn-M1w"/>
@@ -31,7 +38,7 @@
                         <viewControllerLayoutGuide type="bottom" id="dbj-KH-JIK"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="JhP-qt-VFc">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="64" width="384" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
