Identification tableview added, visual modifications, icons added, minor changes

--- a/QPest/MonotoringStoryboard.storyboard
+++ b/QPest/MonotoringStoryboard.storyboard
@@ -40,13 +40,27 @@
                     <view key="view" contentMode="scaleToFill" id="cC0-0q-Red">
                         <rect key="frame" x="0.0" y="64" width="384" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vbz-vs-c1Y">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="vbz-vs-c1Y" secondAttribute="trailing" id="SX6-Sd-0T9"/>
+                            <constraint firstItem="hCb-Nh-BEz" firstAttribute="top" secondItem="vbz-vs-c1Y" secondAttribute="bottom" id="TbN-5K-rfo"/>
+                            <constraint firstItem="vbz-vs-c1Y" firstAttribute="top" secondItem="pbS-qi-SmT" secondAttribute="bottom" id="hoa-BU-7bI"/>
+                            <constraint firstItem="vbz-vs-c1Y" firstAttribute="leading" secondItem="cC0-0q-Red" secondAttribute="leading" id="mRY-ZR-j8P"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="LNx-aR-6Ew"/>
+                    <connections>
+                        <outlet property="tableView" destination="vbz-vs-c1Y" id="bML-Xa-NWo"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CMa-zB-KMn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-39" y="-376"/>
+            <point key="canvasLocation" x="-40" y="-376.46176911544228"/>
         </scene>
     </scenes>
 </document>
