--- a/QPest/IdentificationStoryboard.storyboard
+++ b/QPest/IdentificationStoryboard.storyboard
@@ -40,13 +40,27 @@
                     <view key="view" contentMode="scaleToFill" id="Tbc-Ax-Kks">
                         <rect key="frame" x="0.0" y="64" width="384" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7p0-2r-tht">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="7p0-2r-tht" firstAttribute="top" secondItem="BC1-fH-NFx" secondAttribute="bottom" id="Nmh-oW-xiI"/>
+                            <constraint firstAttribute="trailing" secondItem="7p0-2r-tht" secondAttribute="trailing" id="W3A-oW-6xH"/>
+                            <constraint firstItem="7p0-2r-tht" firstAttribute="leading" secondItem="Tbc-Ax-Kks" secondAttribute="leading" id="up1-nK-pSm"/>
+                            <constraint firstItem="h1n-cg-FEj" firstAttribute="top" secondItem="7p0-2r-tht" secondAttribute="bottom" id="y5C-eJ-xAg"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="oyZ-CO-OtF"/>
+                    <connections>
+                        <outlet property="tableView" destination="7p0-2r-tht" id="MtF-Tk-fQX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Q4V-Tw-mRk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="242" y="-257"/>
+            <point key="canvasLocation" x="241.59999999999999" y="-257.72113943028489"/>
         </scene>
     </scenes>
 </document>
