--- a/QPest/OnboardingStoryboard.storyboard
+++ b/QPest/OnboardingStoryboard.storyboard
@@ -19,24 +19,42 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5fX-Fo-Sab">
-                                <state key="normal" title="Button"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5fX-Fo-Sab">
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.93999999999999995" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="106" id="1ld-Pv-7ut"/>
+                                </constraints>
+                                <state key="normal">
+                                    <attributedString key="attributedTitle">
+                                        <fragment content="Continuar">
+                                            <attributes>
+                                                <color key="NSColor" red="0.23529411764705882" green="0.66274509803921566" blue="0.36078431372549019" alpha="1" colorSpace="calibratedRGB"/>
+                                                <font key="NSFont" size="13" name="Avenir-Book"/>
+                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
+                                </state>
+                                <connections>
+                                    <action selector="didClickContune:" destination="kbQ-rO-d2U" eventType="touchUpInside" id="lTk-x4-xsq"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="5fX-Fo-Sab" secondAttribute="trailing" constant="149" id="VnC-Sl-VJj"/>
-                            <constraint firstItem="5fX-Fo-Sab" firstAttribute="leading" secondItem="fOY-an-yWB" secondAttribute="leadingMargin" constant="148" id="fMv-eJ-Xr0"/>
-                            <constraint firstItem="lu6-nu-Gph" firstAttribute="top" secondItem="5fX-Fo-Sab" secondAttribute="bottom" constant="35" id="zim-Oj-YX2"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="5fX-Fo-Sab" secondAttribute="trailing" constant="119" id="VnC-Sl-VJj"/>
+                            <constraint firstItem="5fX-Fo-Sab" firstAttribute="leading" secondItem="fOY-an-yWB" secondAttribute="leadingMargin" constant="118" id="fMv-eJ-Xr0"/>
+                            <constraint firstItem="lu6-nu-Gph" firstAttribute="top" secondItem="5fX-Fo-Sab" secondAttribute="bottom" constant="107" id="zim-Oj-YX2"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="continueButton" destination="5fX-Fo-Sab" id="N0y-IW-VvF"/>
                         <segue destination="L01-cz-4XS" kind="presentation" identifier="goTerms" id="gqy-lj-Ira"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="m3r-Zo-2Ba" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-47" y="14"/>
+            <point key="canvasLocation" x="-47.200000000000003" y="13.943028485757123"/>
         </scene>
         <!--Pest Terms View Controller-->
         <scene sceneID="JFo-9r-Ua9">
