--- a/QPest/IdentificationStoryboard.storyboard
+++ b/QPest/IdentificationStoryboard.storyboard
@@ -56,11 +56,30 @@
                     <navigationItem key="navigationItem" id="oyZ-CO-OtF"/>
                     <connections>
                         <outlet property="tableView" destination="7p0-2r-tht" id="MtF-Tk-fQX"/>
+                        <segue destination="U0P-FZ-VO9" kind="show" identifier="goManual" id="gab-8b-7Og"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Q4V-Tw-mRk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="241.59999999999999" y="-257.72113943028489"/>
+        </scene>
+        <!--Identification Manual View Controller-->
+        <scene sceneID="QBQ-Zy-YSn">
+            <objects>
+                <viewController id="U0P-FZ-VO9" customClass="IdentificationManualViewController" customModule="QPest" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="sNg-WK-gSt"/>
+                        <viewControllerLayoutGuide type="bottom" id="OWd-rh-PdS"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="mdT-Vo-Agr">
+                        <rect key="frame" x="0.0" y="64" width="384" height="603"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ow2-jK-8F9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="990" y="-258"/>
         </scene>
     </scenes>
 </document>
