--- a/QPest/MonitoringHeaderTableViewCell.xib
+++ b/QPest/MonitoringHeaderTableViewCell.xib
@@ -9,71 +9,20 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="headerCell" rowHeight="54" id="KGk-i7-Jjw" customClass="MonitoringHeaderTableViewCell" customModule="QPest" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="54"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="headerCell" id="KGk-i7-Jjw" customClass="MonitoringHeaderTableViewCell" customModule="QPest" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <frame key="frameInset" width="375" height="53.5"/>
+                <frame key="frameInset" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FOy-yN-oyy">
-                        <color key="backgroundColor" red="0.88235294117647056" green="0.88235294117647056" blue="0.88627450980392153" alpha="1" colorSpace="calibratedRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="7" id="Hc5-K4-9Ub"/>
-                            <constraint firstAttribute="height" constant="54" id="PSA-BQ-9X3"/>
-                        </constraints>
-                    </view>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C0T-le-AWM">
-                        <constraints>
-                            <constraint firstAttribute="height" constant="25" id="7it-pA-881"/>
-                            <constraint firstAttribute="width" constant="323" id="qAw-dA-O1o"/>
-                        </constraints>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JqD-82-N9Y">
                         <attributedString key="attributedText">
-                            <fragment content="Sábado, 8 de Outubro - 2016">
+                            <fragment content="8 de Outubro">
                                 <attributes>
                                     <color key="NSColor" red="0.11372549019607843" green="0.11372549019607843" blue="0.14901960784313725" alpha="1" colorSpace="calibratedRGB"/>
                                     <font key="NSFont" size="16" name="Avenir-Book"/>
-                                    <real key="NSKern" value="1"/>
-                                    <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" minimumLineHeight="11" maximumLineHeight="11" tighteningFactorForTruncation="0.0" allowsDefaultTighteningForTruncation="NO">
-                                        <tabStops>
-                                            <textTab alignment="left" location="28">
-                                                <options/>
-                                            </textTab>
-                                            <textTab alignment="left" location="56">
-                                                <options/>
-                                            </textTab>
-                                            <textTab alignment="left" location="84">
-                                                <options/>
-                                            </textTab>
-                                            <textTab alignment="left" location="112">
-                                                <options/>
-                                            </textTab>
-                                            <textTab alignment="left" location="140">
-                                                <options/>
-                                            </textTab>
-                                            <textTab alignment="left" location="168">
-                                                <options/>
-                                            </textTab>
-                                            <textTab alignment="left" location="196">
-                                                <options/>
-                                            </textTab>
-                                            <textTab alignment="left" location="224">
-                                                <options/>
-                                            </textTab>
-                                            <textTab alignment="left" location="252">
-                                                <options/>
-                                            </textTab>
-                                            <textTab alignment="left" location="280">
-                                                <options/>
-                                            </textTab>
-                                            <textTab alignment="left" location="308">
-                                                <options/>
-                                            </textTab>
-                                            <textTab alignment="left" location="336">
-                                                <options/>
-                                            </textTab>
-                                        </tabStops>
-                                    </paragraphStyle>
+                                    <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                 </attributes>
                             </fragment>
                         </attributedString>
@@ -82,19 +31,15 @@
                 </subviews>
                 <color key="backgroundColor" red="0.97254901960784312" green="0.97254901960784312" blue="0.97254901960784312" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
-                    <constraint firstItem="FOy-yN-oyy" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="8PQ-Id-r5i"/>
-                    <constraint firstItem="C0T-le-AWM" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="12" id="Bvv-SY-wKl"/>
-                    <constraint firstAttribute="bottom" secondItem="FOy-yN-oyy" secondAttribute="bottom" id="JCZ-aO-xoB"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="C0T-le-AWM" secondAttribute="trailing" constant="18" id="ZbZ-cT-5Op"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="C0T-le-AWM" secondAttribute="bottom" constant="0.5" id="ccv-WY-dFq"/>
-                    <constraint firstItem="C0T-le-AWM" firstAttribute="leading" secondItem="FOy-yN-oyy" secondAttribute="trailing" constant="19" id="lm0-oA-bl3"/>
-                    <constraint firstItem="FOy-yN-oyy" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="tPX-n7-uqn"/>
+                    <constraint firstItem="JqD-82-N9Y" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="3" id="1Ap-dd-Jec"/>
+                    <constraint firstItem="JqD-82-N9Y" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="5iv-2v-u2b"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="JqD-82-N9Y" secondAttribute="bottom" constant="3" id="Ort-EO-tsP"/>
+                    <constraint firstItem="JqD-82-N9Y" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="26" id="SlL-8N-FFM"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="dateTitle" destination="C0T-le-AWM" id="nT6-47-fs6"/>
+                <outlet property="dateTitle" destination="JqD-82-N9Y" id="En4-bp-283"/>
             </connections>
-            <point key="canvasLocation" x="33.5" y="46"/>
         </tableViewCell>
     </objects>
 </document>
